# notebooks

./: .gitignore  LICENSE  Pipfile  README.org  build.gradle.kts  environment.yml  gradle.lockfile  pyproject.toml  settings-gradle.lockfile  settings.gradle.kts
.github/: dependabot.yml
kotlin/: DelegatingClasses.ipynb
python/: .gitignore  LangChain.ipynb  TextToSpeech.ipynb  example.notebook_secrets.py
